# llp3

./: CMakeLists.txt  README.md  xml_client.c  xml_server.c
database/include/aggregator/private/: database.h
database/include/aggregator/public/: database.h
database/include/file-work/private/: allocator.h  block.h  record.h  table.h
database/include/file-work/public/: block.h  record.h  table.h
database/include/hashmap/private/: abstract_hashmap.h  memory_hashmap.h  table_hashmap.h
database/include/status/private/: status_codes.h
database/include/structures/private/: table_structures.h
database/include/structures/public/: table_structures.h
database/include/util/private/: converter.h  predicate.h  types.h
database/include/util/public/: predicate.h  types.h
database/include/xml/: from_xml_server.h  to_xml_server.h
database/src/: database-file.c  xml_server.c
database/src/file-work/: allocator.c  block.c  record.c  table.c
database/src/hashmap/: abstract_hashmap.c  memory_hashmap.c  table_hashmap.c
database/src/net/: server_socket_operations.c
database/src/util/: converter.c  predicate.c  types.c
database/src/xml/: from_xml_server.c  to_xml_server.c
net/include/: client_socket_operations.h  server_socket_operations.h
net/src/: client_socket_operations.c  server_socket_operations.c
parser/: xml_client.c
parser/ast/: ast.c  ast.h  ast_node.c  ast_node.h  common_stack.c  common_stack.h  grammar.c  grammar.gv  grammar.h  grammar.output  grammar.y  tokens.c  tokens.l  variable.h  variable_stack.c  variable_stack.h
parser/net/: client_socket_operations.c
parser/xml/: from_xml_client.c  from_xml_client.h  from_xml_server.c  from_xml_server.h  to_xml_client.c  to_xml_client.h  to_xml_server.c  to_xml_server.h
schema/: query_schema.xsd  response_schema.xsd
